# Lensmap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
crates/lensmap-cli/: Cargo.toml
crates/lensmap-cli/src/: main.rs
docs/: LENSMAP_BACKLOG.md  LENSMAP_HUMAN_METRICS_OPERATIONS.md  LENSMAP_SCOPE_REFERENCE.md  LENSMAP_SRS.md  LENSMAP_TECH_STACK.md
editor/jetbrains/: README.md  build.gradle.kts  settings.gradle.kts
editor/jetbrains/src/main/kotlin/dev/lensmap/jetbrains/: LensMapPlugin.kt
editor/vscode/: LICENSE  README.md  extension.js  package-lock.json  package.json  package.nls.json  package.nls.zh-cn.json
schema/: lensmap.schema.v1.json
scripts/: check-rust-format.sh  install.ps1  install.sh
templates/: service.lens.template.json
