[workspace]
members = ["crates/lensmap-cli"]
resolver = "2"

[workspace.package]
version = "0.3.11"
edition = "2021"
license = "MIT"
repository = "https://github.com/protheuslabs/Lensmap"
authors = ["Protheus Labs"]

[workspace.dependencies]
chrono = "0.4"
hex = "0.4"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2.5"
